changed theme to dark, improved UI, changed slider for mobile, moved from svg frame to png, fixed page overflowing issues.

--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@
     padding: 0;
 }
 html {
-    background-color: rgb(250, 251, 255);
+    background-color: rgb(17, 17, 17);
 }
 body {
     height: auto;
     min-width: 100dvw;
-    overflow: hidden;
+    /* overflow: hidden; */
     --c1: red;
-    --scale: 5;
-    --mul: 2;
+    --upperScale: 5;
+    --upperMul: 1.2;
+    --scale: var(--upperScale);
+    --mul: var(--upperMul);
 }
 #viewport {
     height: 100%;
@@ -21,7 +23,7 @@ body {
     justify-content: center;
     padding-top: 2rem;
     overflow: hidden;
-    margin-bottom: 1.2rem;
+    margin-bottom: 2rem;
     /* background-color: red; */
     /* align-items: center; */
 }
@@ -39,6 +41,7 @@ body {
     /* background-repeat: no-repeat; */
     /* background-size: 90%; */
     /* background-position: 50% 50%; */
+    border: 2px solid rgb(56, 56, 56);
 }
 #background_image  {
     transition: 100ms;
@@ -50,12 +53,12 @@ body {
     width: calc(16rem * var(--scale));
     border-radius: 0.8rem;
     background-color: rgba(0, 0, 0, 0);
-    background-image: url(./main_frame.svg);
+    background-image: url(./main_frame.png);
     background-size: contain;
     /* margin-top: 1px; */
     /* margin-left: -4px; */
     /* cursor: pointer; */
-    border: 2px solid rgb(204, 204, 204);
+    border: 2px solid rgb(56, 56, 56);
 }
 
 #output {
@@ -75,9 +78,9 @@ body {
 
 button,a {
     transition: 300ms;
-    padding: 1.2rem 2.5rem;
+    padding: 1rem 2.5rem;
     border-radius: 5rem;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     outline: none;
     border: none;
     background-color: rgb(255, 189, 66);
@@ -89,7 +92,7 @@ button,a {
 }
 button:hover,a:hover {
     transition: 400ms;
-    border-radius: 1rem;
+    border-radius: 1.4rem;
     background-color: rgb(255, 201, 100);
     cursor: pointer;
 }
@@ -136,11 +139,12 @@ a#download {
     font-weight: 500;
     font-style: normal;
     font-size: 0.8rem;
-    gap: 0.5rem;
-    border: 1px solid rgb(221, 221, 221);
-    background-color: white;
+    gap: 1rem;
+    border: 0px solid rgb(221, 221, 221);
+    background-color: rgb(5, 5, 5);
     border-radius: 0.8rem;
-    padding: 1rem 1.6rem;
+    padding: 1.1rem 1.8rem 1.5rem 1.8rem;
+    color: #cccccc;
 }
 input[type="range"] {
     width: 22rem;
@@ -149,26 +153,26 @@ input[type="range"] {
     -webkit-appearance: none;
     height: 7px;
     border-radius: 5rem;
-    background: #f0f0f0;
+    background: #1f1f1f;
     outline: none;
     -webkit-transition: .2s;
     transition: background .3s;
   }
   
   input[type="range"]:hover {
-    background: rgb(255, 242, 217);
+    background: rgb(61, 56, 50);
   }
   
   input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     border-radius: 5rem;
-    border: 3px solid white;
+    border: 2.5px solid rgb(255, 243, 222);
     background: rgb(255, 201, 100);
     cursor: pointer;
-    box-shadow: 0rem 0rem 6px rgba(0, 0, 0, 0.322);
+    box-shadow: 0rem 0rem 6px rgba(0, 0, 0, 0.151);
   }
   
   input[type="range"]::-moz-range-thumb {
@@ -179,11 +183,32 @@ input[type="range"] {
     cursor: pointer;
   }
 
+  button.fab,
+  button#copy_btn,
+  button#dl {
+    position: absolute;
+    right: 2rem;
+    height: 4rem;
+    width: 4rem;
+    max-height: 4rem;
+    max-width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+  button#copy_btn {
+    bottom: 2rem;
+  }
+  button#dl {
+    bottom: 6.8rem;
+  }
+
 
 @media screen and (max-width: 1400px) {
     body {
         --scale: 4;
-        --mul: 2.5;
+        --mul: 1.5;
     }
     input[type="range"] {
         width: 16rem;
@@ -193,7 +218,7 @@ input[type="range"] {
 @media screen and (max-width: 1200px) {
     body {
         --scale: 3.2;
-        --mul: 3.125;
+        --mul: 1.875;
     }
     input[type="range"] {
         width: 12rem;
@@ -203,7 +228,7 @@ input[type="range"] {
 @media screen and (max-width: 920px) {
     body {
         --scale: 2.5;
-        --mul: 4;
+        --mul: 2.4;
     }
     #image_controller{
         flex-direction: column;
@@ -225,21 +250,21 @@ input[type="range"] {
 @media screen and (max-width: 720px) {
     body {
         --scale: 2;
-        --mul: 5;
+        --mul: 3;
     }
 }
 
 @media screen and (max-width: 560px) {
     body {
         --scale: 1.6;
-        --mul: 6.25;
+        --mul: 3.75;
     }
 }
 
 @media screen and (max-width: 450px) {
     body {
-        --scale: 1.3;
-        --mul: 7.692;
+        --scale: 1.4;
+        --mul: 4.29;
     }
     input[type="range"] {
         width: 18rem;
@@ -251,5 +276,61 @@ input[type="range"] {
     button#dl {
         padding-inline: 1rem;
         width: 5.5rem;
+        bottom: 1.2rem;
     }
+    button#copy_btn {
+        display: none;
+      }
+
+    #viewport {
+        margin-bottom: 1.6rem;
+    }
+
+    .item {
+        display: flex;
+        flex-direction: column;
+        font-family: "Montserrat", serif;
+        font-optical-sizing: auto;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 0.8rem;
+        gap: 0.5rem;
+        border-radius: 0.8rem;
+        padding: 1rem 1.6rem 1.5rem 1.6rem;
+    }
+    
+    input[type="range"] {
+        -webkit-appearance: none;
+        height: 25px;
+        width: 19rem;
+        border-radius: 5rem;
+        outline: none;
+        -webkit-transition: .2s;
+        transition: background .3s;
+        overflow: hidden;
+      }
+      
+      input[type="range"]:hover {
+        background: rgb(61, 56, 50);
+      }
+      
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 0;
+        border: 0px solid white;
+        background: rgba(255, 201, 100, 1);
+        cursor: pointer;
+        box-shadow: -300px 0px 0px 300px rgb(255, 201, 100);
+      }
+      
+      input[type="range"]::-moz-range-thumb {
+        width: 15px;
+        height: 15px;
+        border-radius: 5rem;
+        background: rgb(255, 201, 100);
+        cursor: pointer;
+      }
 }
